fix visual bug on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ body {
 .picture-box {
     max-width: 80%;
     margin: 0 auto;
-    height: 40vh;
+    min-height: 40vh;
     text-align: center;
     font-family: Amiko, sans-serif;
     font-weight: bold;
